dev_ws/log/build_2020-11-24_02-10-45/tallest_building/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_building\client_function.py", line 20
    nonlocal cli, node, did_run, did_get_result
    ^
SyntaxError: no binding for nonlocal 'did_get_result' found

